Adding implementation of Spring